Fixed horizontal spacing

--- a/test/mural.css
+++ b/test/mural.css
@@ -10,14 +10,16 @@ html, body {
 
 #container: {
   position: relative;
+  width: 100%;
+  height: 300px;
+  top: 100px;
   margin: 0 auto;
 }
 
 .mural-item {
   cursor: pointer;
-  width: 50px;
-  height: 50px;
-  position: absolute;
+  width: 100px;
+  height: 100px;
   outline: none;
   user-select: none;
   z-index: 1;
@@ -30,8 +32,8 @@ html, body {
 }
 
 .mural-item:after {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   background: #FFF;
   content: '';
   position: absolute;
